ping-pong/manifests/deployment-presistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: pingpong-logoutput-pvc
      containers:
        - name: ping-pong
          image: cupaxxhd/ping-pong
          volumeMounts: # Mount volume
            - name: shared-storage
              mountPath: /src/app/files
