ping-pong/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ping-pong
  namespace: exercises
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: cupaxxhd/ping-pong:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /ready
              port: 3002
  strategy:
    canary:
      steps:
        - setWeight: 100
        - analysis:
            templates:
              - templateName: pingpong-cpu-guard
