ping-pong/manifests/knative-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong
spec:
  template:
    spec:
      containers:
        - image: cupaxxhd/ping-pong
          ports:
            - containerPort: 8080
          envFrom:
            - configMapRef:
                name: postgres-config
            - secretRef:
                name: postgres-secret
