ping-pong/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: exercises
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
